// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CCardHeader customize 1`] = `
<div>
  <h3
    class="card-header bazinga"
  >
    Test
  </h3>
</div>
`;

exports[`loads and displays CCardHeader component 1`] = `
<div>
  <div
    class="card-header"
  >
    Test
  </div>
</div>
`;
